# rust_talk

./: .gitignore  .~lock.rust_presentation.odp#  README.md  rust_presentation.odp  rust_types.rs
example_borrowing/: Cargo.toml
example_borrowing/src/: main.rs
example_ndarray/: Cargo.toml
example_ndarray/src/: main.rs
example_python_module/: Cargo.toml  pyproject.toml  test_rust_python.py
example_python_module/src/: lib.rs
example_python_module_parallel/: Cargo.toml  pyproject.toml
example_python_module_parallel/src/: lib.rs
example_results_options/: Cargo.toml
example_results_options/src/: main.rs
example_structs/: Cargo.toml
example_structs/src/: main.rs
example_traits/: Cargo.toml  sim.toml
example_traits/src/: main.rs
presentation/images_code_for_images/: python_example.py
